--- a/Page Code/index.html
+++ b/Page Code/index.html
@@ -62,7 +62,7 @@
       <img src="images/Group171.svg" alt="" class="img-fluid">
     </div>
   </div>
-  <div class="content-wrapper" style="background-color: #f7f8fa">
+  <div class="content-wrapper" style="background-color: #f4f4f4">
     <div class="container">
       <div class="middle-section">
       <section class="features-overview" id="features-section">
