Add "Go to Forum" Button

--- a/Page Code/index.html
+++ b/Page Code/index.html
@@ -43,7 +43,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#contact-section">Contact Us</a>
           </li>
-          <li class="nav-item btn-contact-us pl-4 pl-lg-0">
+          <li class="nav-item btn-contact-us">
             <button class="btn btn-info btn-rounded" id="sign-up-btn">Sign Up</button>
           </li>
         </ul>
@@ -57,7 +57,7 @@
       <h6 class="font-weight-normal text-muted pb-3">A friendly, supportive forum based around providing lifestyle tips to people to improve health and well-being.</h6>
       <div>
         <button class="btn btn-rounded mr-1" id="special-button">Sign Up</button>
-        <button class="btn btn-opacity-success btn-rounded ml-1">Learn more</button>
+        <button class="btn btn-opacity-success btn-rounded ml-1">Go to Forum</button>
       </div>
       <img src="images/Group171.svg" alt="" class="img-fluid">
     </div>
